syntax = "proto3";

import "Protos/GroupRelationShip/actions.proto";

option csharp_namespace = "Relationship_service.Protos.GroupRelationShip";

package relationship;



//||||||||||||||||||||||||||||||||\\
//			  SERVICES			  \\
//||||||||||||||||||||||||||||||||\\

service GroupToRelationship{
	rpc TransferGroupIdsByGameId (GruopIdsByGameIdRequest) returns (GruopIdsByGameIdResponse);
}